--- a/delivery_bot/config/gz_bridge.yaml
+++ b/delivery_bot/config/gz_bridge.yaml
@@ -4,10 +4,6 @@
   gz_type_name: "gz.msgs.Clock"
   direction: GZ_TO_ROS
 
-- topic_name: "cmd_vel"
-  ros_type_name: "geometry_msgs/msg/Twist"
-  gz_type_name: "gz.msgs.Twist"
-
 # gz topic published by Sensors plugin
 - ros_topic_name: "scan"
   gz_topic_name: "scan"
@@ -37,7 +33,7 @@
   direction: GZ_TO_ROS
 
 # gz topic subscribed to by DiffDrive plugin
-- ros_topic_name: "diff_cont/cmd_vel_unstamped"
+- ros_topic_name: "cmd_vel_out"
   gz_topic_name: "cmd_vel"
   ros_type_name: "geometry_msgs/msg/Twist"
   gz_type_name: "gz.msgs.Twist"
